<resources>
    <string name="app_name">Baking App</string>
    <string name="error_message">An error has occurred trying to retrieve the list of recipes. Please check your internet
    connection or try again later.</string>
    <string name="try_again">Try Again</string>
    <string name="refresh">Refresh</string>
    <string name="empty_message">No recipes found!</string>
    <string name="error_description">Error Image</string>

    <plurals name="recipes_servings">
        <item quantity="one">@string/recipes_serving_one</item>
        <item quantity="few">@string/recipes_serving_few</item>
        <item quantity="many">@string/recipes_serving_many</item>
        <item quantity="two">@string/recipes_serving_two</item>
        <item quantity="other">@string/recipes_serving_other</item>
        <item quantity="zero">@string/recipes_serving_zero</item>
    </plurals>

    <string name="recipes_serving_one">Serving %d portion</string>
    <string name="recipes_serving_few">Serving %d portions</string>
    <string name="recipes_serving_many">Serving %d portions</string>
    <string name="recipes_serving_two">Serving %d portions</string>
    <string name="recipes_serving_other">Serving %d portions</string>
    <string name="recipes_serving_zero">Serving %d portions</string>

    <string name="ingredient">\u2022 %s</string>
    <string name="ingredient_measure">%s %s</string>
    <string name="ingredients_title">Ingredients:</string>

    <string name="button_next_step">Next Step</string>
    <string name="button_previous_step">Previous Step</string>

    <string name="title_activity_recipes">Recipes</string>
</resources>
